# lzfse

./: .gitignore  Makefile.am  configure.ac
include/: Makefile.am
m4/: as-compiler-flag.m4
src/: Makefile.am  liblzfse-1.0.pc.in  liblzfse.pc.in  lzfse_decode.c
tools/: Makefile.am  lzfse_main.c
